--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.34",
+    "@types/react": "^16.0.1",
+    "@types/react-redux": "^4.4.47",
     "react-scripts": "1.0.10"
   },
   "scripts": {
