--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "intern.oslopinball.no",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.5.1",
