--- a/package.json
+++ b/package.json
@@ -7,24 +7,27 @@
     "node": "8.2.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "bulma": "^0.5.1",
-    "farce": "^0.2.1",
-    "found": "^0.3.3",
-    "isomorphic-fetch": "^2.2.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/react": "^16.0.1",
     "@types/react-redux": "^4.4.47",
-    "react-scripts": "1.0.10"
+    "babel-eslint": "^7.2.3",
+    "react-scripts": "1.0.10",
+    "babel-polyfill": "^6.23.0",
+    "bulma": "^0.5.1",
+    "classnames": "^2.2.5",
+    "history": "^4.6.3",
+    "isomorphic-fetch": "^2.2.1",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
