--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "engines": {
     "node": "8.2.1"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/react": "^16.0.1",
     "@types/react-redux": "^4.4.47",
     "babel-eslint": "^7.2.3",
-    "react-scripts": "1.0.10",
     "babel-polyfill": "^6.23.0",
     "bulma": "^0.5.1",
     "classnames": "^2.2.5",
@@ -25,6 +23,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
+    "react-scripts": "1.0.10",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
