--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start-dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
